--- a/src/index.html
+++ b/src/index.html
@@ -341,8 +341,11 @@
                 <div class="footer__phone">
                   <a
                     class="footer__phone-link"
-                    href="tel:+38 (044) 278-13-57"
-                  >тел. +38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
+                    href="tel:+380442781357"
+                  >
+                    тел. +38 (044) 278-13-57 <br>
+                    факс +38 (044) 278-74-54
+                  </a>
                 </div>
 
                 <div class="footer__email">
