--- a/src/index.html
+++ b/src/index.html
@@ -335,7 +335,9 @@
                     class="footer__adress-link"
                     href="https://goo.gl/maps/RvopVkvbDjsBpsSH7"
                     target="_blank"
-                  >вул. М. Грушевського, 6; Київ, 01001</a>
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
                 </div>
 
                 <div class="footer__phone">
