add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
             <div class="menu__line"></div>
 
             <div class="menu__shedule">
-              <div class="menu__subtitle">Графік роботи</div>
+              <h4 class="menu__subtitle">Графік роботи</h4>
 
               <div class="menu__shedule-day">
                 <div class="menu__text">
@@ -314,7 +314,7 @@
           <div class="footer__content">
             <div class="footer__body">
               <div class="footer__shedule" id="about-us">
-                <div class="footer__subtitle">Графік роботи</div>
+                <h4 class="footer__subtitle">Графік роботи</h4>
 
                 <div class="footer__shedule-day">
                   <div class="footer__text">
@@ -335,14 +335,19 @@
                     class="footer__adress-link"
                     href="https://goo.gl/maps/RvopVkvbDjsBpsSH7"
                     target="_blank"
-                  >вул. М. Грушевського, 6; Київ, 01001</a>
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
                 </div>
 
                 <div class="footer__phone">
                   <a
                     class="footer__phone-link"
-                    href="tel:+38 (044) 278-13-57"
-                  >тел. +38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
+                    href="tel:+380442781357"
+                  >
+                    тел. +38 (044) 278-13-57 <br>
+                    факс +38 (044) 278-74-54
+                  </a>
                 </div>
 
                 <div class="footer__email">
