add correct index.html

--- a/src/index.html
+++ b/src/index.html
@@ -335,19 +335,14 @@
                     class="footer__adress-link"
                     href="https://goo.gl/maps/RvopVkvbDjsBpsSH7"
                     target="_blank"
-                  >
-                    вул. М. Грушевського, 6; Київ, 01001
-                  </a>
+                  >вул. М. Грушевського, 6; Київ, 01001</a>
                 </div>
 
                 <div class="footer__phone">
                   <a
                     class="footer__phone-link"
-                    href="tel:+380442781357"
-                  >
-                    тел. +38 (044) 278-13-57 <br>
-                    факс +38 (044) 278-74-54
-                  </a>
+                    href="tel:+38 (044) 278-13-57"
+                  >тел. +38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
                 </div>
 
                 <div class="footer__email">
