--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
 
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" href="./images/icons/NAMU.svg">
@@ -19,12 +22,10 @@
           <div class="top-bar top-bar__header">
             <a href="#menu" class="top-bar__icon top-bar__icon-main"></a>
 
-            <a href="#" >
-              <img
-                class="top-bar__logo"
-                src="./images/icons/NAMU.svg"
-                alt="NAMU"
-              >
+            <a href="#">
+              <img class="top-bar__logo"
+              src="./images/icons/NAMU.svg"
+              alt="NAMU">
             </a>
           </div>
         </div>
@@ -84,11 +85,16 @@
 
               <div class="menu__shedule-day">
                 <div class="menu__text">
-                  <span class="menu__time">12:00 — 20:00 </span> середа <br> <span class="menu__time">12:00 — 20:00</span> четвер <br> <span class="menu__time">12:00 — 20:00</span> п’ятниця <br> <span class="menu__time">11:00 — 19:00</span> субота <br> <span class="menu__time">11:00 — 19:00</span> неділя
+                  <span class="menu__time">12:00 — 20:00 </span> середа <br>
+                  <span class="menu__time">12:00 — 20:00</span> четвер <br>
+                  <span class="menu__time">12:00 — 20:00</span> п’ятниця <br>
+                  <span class="menu__time">11:00 — 19:00</span> субота <br>
+                  <span class="menu__time">11:00 — 19:00</span> неділя
                 </div>
 
                 <div class="menu__weekend">
-                  <span class="menu__time">Вихідні:</span> понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею
+                  <span class="menu__time">Вихідні:</span> понеділок, вівторок <br>Каса припиняє роботу за 1 годину до
+                  закриття музею
                 </div>
               </div>
             </div>
@@ -130,7 +136,9 @@
               </div>
 
               <h3 class="events__subtitle">Йду і повертаюсь</h3>
-              <div class="events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+              <div class="events__text">Національний Художній Музей України презентує унікальну частину колекції
+                Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </div>
             </div>
           </div>
 
@@ -160,7 +168,9 @@
               </div>
 
               <h3 class="events__subtitle">І спогади і мрії</h3>
-              <div class="events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+              <div class="events__text">Національний художній музей України до 100 річчя від дня народження видатної
+                української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </div>
             </div>
           </div>
         </div>
@@ -267,12 +277,9 @@
                   placeholder="E-mail"
                   id="email"
                   required
-                ></input>
+              ></input>
 
-                <button
-                  class="subscription__arrow-button"
-                  type="submit"
-                ></button>
+                <button class="subscription__arrow-button" type="submit"></button>
               </form>
             </div>
           </div>
@@ -284,7 +291,7 @@
       <div class="container">
         <div class="footer__inf">
           <div class="footer__top">
-            <a href="#" >
+            <a href="#">
               <img
                 class="footer__logo"
                 src="./images/icons/NAMU.svg"
@@ -318,11 +325,16 @@
 
                 <div class="footer__shedule-day">
                   <div class="footer__text">
-                    <span class="footer__time">12:00 — 20:00 </span> середа <br> <span class="footer__time">12:00 — 20:00</span> четвер <br> <span class="footer__time">12:00 — 20:00</span> п’ятниця <br> <span class="footer__time">11:00 — 19:00</span> субота <br> <span class="footer__time">11:00 — 19:00</span> неділя
+                    <span class="footer__time">12:00 — 20:00 </span> середа <br>
+                    <span class="footer__time">12:00 — 20:00</span> четвер <br>
+                    <span class="footer__time">12:00 — 20:00</span> п’ятниця <br>
+                    <span class="footer__time">11:00 — 19:00</span> субота <br>
+                    <span class="footer__time">11:00 — 19:00</span> неділя
                   </div>
 
                   <div class="footer__weekend">
-                    <span class="footer__time">Вихідні:</span> понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею
+                    <span class="footer__time">Вихідні:</span>
+                    понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею
                   </div>
                 </div>
               </div>
@@ -351,10 +363,7 @@
                 </div>
 
                 <div class="footer__email">
-                  <a
-                    class="footer__email-link"
-                    href="email: info@namu.kiev.ua"
-                  > e-mail: info@namu.kiev.ua</a>
+                  <a class="footer__email-link" href="email: info@namu.kiev.ua"> e-mail: info@namu.kiev.ua</a>
                 </div>
               </div>
             </div>
