--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
               </label>
             </div>
 
-            <div class="header__events">ПОДІЇ</div>
+            <span class="header__events">ПОДІЇ</span>
           </div>
         </div>
       </div>
@@ -173,7 +173,54 @@
       </div>
     </aside>
 
-    <main class="main"></main>
+    <main class="main">
+      <section class="events">
+        <div class="container">
+          <h1 class="events__title">Актуальні події</h1>
+          <article class="events__exhibition">
+            <img
+              src="./images/exhibition/picture_1.jpg"
+              alt="Йду і повертаюсь"
+              class="events__exhibition--picture"
+            >
+            <div class="events__exhibition--wrap">
+              <div class="events__exhibition--date">
+                <span>ВИСТАВКА</span>
+                <span>26.08-29.11.2019</span>
+              </div>
+              <h2 class="events__exhibition--title">Йду і повертаюсь</h2>
+              <p class="events__exhibition--content">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </article>
+
+          <article class="events__exhibition">
+            <img
+              src="./images/exhibition/picture_2.jpg"
+              alt="Йду і повертаюсь"
+              class="events__exhibition--picture"
+            >
+            <div class="events__exhibition--wrap">
+              <div class="events__exhibition--date">
+                <span>ВИСТАВКА</span>
+                <span>26.08-29.11.2019</span>
+              </div>
+              <h2 class="events__exhibition--title">І спогади і мрії</h2>
+              <p class="events__exhibition--content">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="lection">
+        <div class="lection__background"></div>
+      </section>
+
+      <section class="gallery"></section>
+    </main>
 
     <footer class="footer"></footer>
 
