--- a/src/index.html
+++ b/src/index.html
@@ -217,9 +217,21 @@
 
       <section class="lection">
         <div class="lection__background"></div>
+        <div class="lection__info">
+          <div class="lection__info--date">
+            <span>ЛЕКЦІЯ</span>
+            <span>26/08/2019 - 11:00</span>
+          </div>
+          <h1 class="lection__info--title">Від класицизму до романтизму</h1>
+        </div>
+        <div class="lection__break"></div>
       </section>
 
-      <section class="gallery"></section>
+      <section class="gallery">
+        <div class="container">
+          <h1 class="gallery__title">Галерея</h1>
+        </div>
+      </section>
     </main>
 
     <footer class="footer"></footer>
