--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,6 @@
   <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
     <header class="header" id="header">
-
       <div class="header__background-img">
       </div>
 
@@ -59,7 +58,9 @@
           class="header__button__buy link"
         >
           <div class="header__button__block">
-            <span class="header__button__text">КВИТКИ</span>
+            <span class="header__button__text">
+              КВИТКИ
+            </span>
           </div>
           <div class="header__button__icon">
             <img
@@ -72,7 +73,7 @@
       </div>
 
       <div class="header__side-block">
-        <span class="header__button__side-block__text">Події</span>
+        Події
       </div>
     </header>
 
@@ -110,24 +111,24 @@
           <div class="menu__working-hours__info working-hours__info">
             <ul class="menu__working-hours__list working-hours__list">
               <li class="working-hours__item">
-                <span class="working-hours__text-bold">12:00 — 20:00</span> середа
+                <strong>12:00 — 20:00</strong> середа
               </li>
               <li class="working-hours__item">
-                <span class="working-hours__text-bold">12:00 — 20:00</span> четвер
+                <strong>12:00 — 20:00</strong> четвер
               </li>
               <li class="working-hours__item">
-                <span class="working-hours__text-bold">12:00 — 20:00</span> п’ятниця
+                <strong>12:00 — 20:00</strong> п’ятниця
               </li>
               <li class="working-hours__item">
-                <span class="working-hours__text-bold">11:00 — 19:00</span> субота
+                <strong>11:00 — 19:00</strong> субота
               </li>
               <li class="working-hours__item">
-                <span class="working-hours__text-bold">11:00 — 19:00</span> неділя
+                <strong>11:00 — 19:00</strong> неділя
               </li>
             </ul>
             <div class="working-hours__weekend">
-              <div> <span class="working-hours__text-bold">Вихідні</span> понеділок, вівторок</div>
-              <div>Каса припиняє роботу за 1 годину до закриття музею</div>
+              <p class="working-hours__weekend__text"> <strong>Вихідні</strong> понеділок, вівторок</p>
+              <p class="working-hours__weekend__text">Каса припиняє роботу за 1 годину до закриття музею</p>
             </div>
           </div>
         </div>
@@ -150,21 +151,21 @@
 
             <div class="current-events__block__article info-block">
               <div class="current-events__block__top  info-block__top">
-                <span class="current-events__block__top__text info-block__event">
+                <p class="current-events__block__top__text info-block__event">
                   Виставка
-                </span>
-                <span class="current-events__block__top__data info-block__data">
+                </p>
+                <p class="current-events__block__top__data info-block__data">
                   26.08-29.11.2019
-                </span>
+                </p>
               </div>
 
               <div class="current-events__block__info info-block__bottom">
                 <h3 class="current-events__block__info__title info-block__title info-block__title--orange">
                   Йду і повертаюсь
                 </h3>
-                <div class="current-events__block__info__text">
+                <p class="current-events__block__info__text">
                   Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-                </div>
+                </p>
               </div>
             </div>
           </article>
@@ -177,21 +178,21 @@
             >
             <div class="current-events__block__article info-block">
               <div class="current-events__block__top info-block__top">
-                <span class="current-events__block__top__text info-block__event">
+                <p class="current-events__block__top__text info-block__event">
                   Виставка
-                </span>
-                <span class="current-events__block__top__data info-block__data">
+                </p>
+                <p class="current-events__block__top__data info-block__data">
                   26.08-29.11.2019
-                </span>
+                </p>
               </div>
 
               <div class="current-events__block__info info-block__bottom">
                 <h3 class="current-events__block__info__title info-block__title info-block__title--orange">
                   І спогади і мрії
                 </h3>
-                <div class="current-events__block__info__text">
+                <p class="current-events__block__info__text">
                   Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-                </div>
+                </p>
               </div>
             </div>
           </article>
@@ -208,12 +209,12 @@
         <div class="lecture__info">
           <div class="lecture__block info-block">
             <div class="lecture__block__info info-block__top">
-              <span class="info-block__event">
+              <p class="info-block__event">
                 ЛЕКЦІЯ
-              </span>
-              <span class="info-block__data">
+              </p>
+              <p class="info-block__data">
                 26/08/2019 - 11:00
-              </span>
+              </p>
             </div>
             <div class="lecture__block__title info-block__bottom">
               <h2 class="info-block__title">
@@ -275,9 +276,9 @@
             <h2 class="section__title section__title--white subscription__title">
               Підписка
             </h2>
-            <div class="subscription__text">
+            <p class="subscription__text">
               Бути в курсі всіх актуальних подій та останніх новин.
-            </div>
+            </p>
           </div>
           <form
             action="email"
@@ -347,24 +348,24 @@
             <div class="about-us__info__working-hours__block working-hours__info">
               <ul class="working-hours__list">
                 <li class="working-hours__item">
-                  <span class="working-hours__text-bold">12:00 — 20:00</span> середа
+                  <strong>12:00 — 20:00</strong> середа
                 </li>
                 <li class="working-hours__item">
-                  <span class="working-hours__text-bold">12:00 — 20:00</span> четвер
+                  <strong>12:00 — 20:00</strong> четвер
                 </li>
                 <li class="working-hours__item">
-                  <span class="working-hours__text-bold">12:00 — 20:00</span> п’ятниця
+                  <strong>12:00 — 20:00</strong> п’ятниця
                 </li>
                 <li class="working-hours__item">
-                  <span class="working-hours__text-bold">11:00 — 19:00</span> субота
+                  <strong>11:00 — 19:00</strong> субота
                 </li>
                 <li class="working-hours__item">
-                  <span class="working-hours__text-bold">11:00 — 19:00</span> неділя
+                  <strong>11:00 — 19:00</strong> неділя
                 </li>
               </ul>
               <div class="working-hours__weekend">
-                <div> <span class="working-hours__text-bold">Вихідні</span> понеділок, вівторок</div>
-                <div>Каса припиняє роботу за 1 годину до закриття музею</div>
+                <p class="working-hours__weekend__text">Вихідні понеділок, вівторок</p>
+                <p class="working-hours__weekend__text">Каса припиняє роботу за 1 годину до закриття музею</p>
               </div>
             </div>
           </div>
