gallery section has been done

--- a/src/index.html
+++ b/src/index.html
@@ -49,12 +49,14 @@
             <div class="header__title">ХУДОЖНІЙ МУЗЕЙ</div>
 
             <div class="header__ticket--wrap">
-              <input
-                class="header__ticket--btn"
-                type="button"
-                id="ticket-btn"
-                value="КВИТКИ"
-              >
+              <a href="#events">
+                <input
+                  class="header__ticket--btn"
+                  type="button"
+                  id="ticket-btn"
+                  value="КВИТКИ"
+                >
+              </a>
               <label for="ticket-btn" class="header__ticket--label">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -115,7 +117,7 @@
                 <ul class="nav__list">
                   <div class="nav__wrap">
                     <li class="nav__link">
-                      <a href="#" class="nav__item">
+                      <a href="#gallery" class="nav__item">
                         Галерея
                       </a>
                     </li>
@@ -125,7 +127,7 @@
                       </a>
                     </li>
                     <li class="nav__link">
-                      <a href="#" class="nav__item">
+                      <a href="#events" class="nav__item">
                         Виставки та події
                       </a>
                     </li>
@@ -174,7 +176,7 @@
     </aside>
 
     <main class="main">
-      <section class="events">
+      <section class="events" id="events">
         <div class="container">
           <h1 class="events__title">Актуальні події</h1>
           <article class="events__exhibition">
@@ -227,9 +229,48 @@
         <div class="lection__break"></div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="container">
           <h1 class="gallery__title">Галерея</h1>
+
+          <div class="gallery__carousel">
+            <img
+              src="./images/gallery/fedir-krychevskyj-_vesilnyj-obryad_molodytsi.jpg"
+              alt="Федір Кричевський. «Весільний обряд. Молодиці»"
+              class="gallery__picture"
+            >
+
+            <img
+              src="./images/gallery/Petro_Levchenko_Glukhoman.jpg"
+              alt="Петро Левченко. «Глухомань (Село взимку)»"
+              class="gallery__picture"
+            >
+
+            <img
+              src="./images/gallery/Kyriak_Kostandi_-_Geese.jpg"
+              alt="Киріак Костанді. «Гуси»"
+              class="gallery__picture"
+            >
+
+            <img
+              src="./images/gallery/KirIak_KostandI_Sonyachniy_den.jpg"
+              alt="Киріак Костанді. «Сонячний день (етюд до однойменної картини)»"
+              class="gallery__picture"
+            >
+
+            <img
+              src="./images/gallery/Mikola_Gluschenko_Na_mori.jpg"
+              alt="Микола Глущенко. «На морі»"
+              class="gallery__picture"
+            >
+          </div>
+
+          <div class="gallery__dots">
+            <span class="gallery__dots--item"></span>
+            <span class="gallery__dots--item"></span>
+            <span class="gallery__dots--item"></span>
+            <span class="gallery__dots--item"></span>
+          </div>
         </div>
       </section>
     </main>
