--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
+    <title>Національний художній музей України</title>
     <link
       rel="shortcut icon"
       href="./images/icons/icon-page-logo.jpg"
@@ -122,7 +122,7 @@
                       </a>
                     </li>
                     <li class="nav__link">
-                      <a href="#" class="nav__item">
+                      <a href="#subscribe" class="nav__item">
                         Про Нас
                       </a>
                     </li>
@@ -132,7 +132,7 @@
                       </a>
                     </li>
                     <li class="nav__link">
-                      <a href="#" class="nav__item">
+                      <a href="#contacts" class="nav__item">
                         Контакти
                       </a>
                     </li>
@@ -273,9 +273,166 @@
           </div>
         </div>
       </section>
+
+      <section class="subscribe" id="subscribe">
+        <div class="subscribe__outer">
+          <div class="container">
+            <div class="subscribe__wrap">
+              <h1 class="subscribe__title">Підписка</h1>
+              <p class="subscribe__content">Бути в курсі всіх актуальних подій та останніх новин.</p>
+              <div class="subscribe__form-wrap">
+                <form class="subscribe__form" onsubmit="this.reset(); window.scrollTo({ top: 0 }); return false;">
+                  <input type="email"
+                    class="subscribe__form--email"
+                    placeholder="E-mail"
+                  >
+                  <button
+                    type="submit"
+                    class="subscribe__form--submit"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                    >
+                      <g clip-path="url(#clip0_304_5)">
+                        <path d="M8.58984 16.59L13.1698 12L8.58984 7.41L9.99984 6L15.9998 12L9.99984 18L8.58984 16.59Z" fill="black">
+                      </g>
+                      <defs>
+                        <clippath id="clip0_304_5">
+                          <rect
+                            width="24"
+                            height="24"
+                            fill="white">
+                        </clippath>
+                      </defs>
+                    </svg>
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <section class="contacts" id="contacts">
+          <div class="contacts__wrap--top">
+            <div class="contacts__name">
+              NA
+              <br>
+              MU
+            </div>
+            <div class="contacts__socials">
+              <div class="contacts__socials--facebook">
+                <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" target="_blank">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                  >
+                    <g clip-path="url(#clip0_320_149)">
+                      <path
+                        d="M8.82075 4.64899C8.82075 5.2538 8.82075 7.9533 8.82075 7.9533H6.3999V11.9938H8.82075V24.0009H13.7937V11.9942H17.1308C17.1308 11.9942 17.4433 10.0568 17.5948 7.93841C17.1604 7.93841 13.8125 7.93841 13.8125 7.93841C13.8125 7.93841 13.8125 5.58776 13.8125 5.17573C13.8125 4.76282 14.3547 4.2074 14.8906 4.2074C15.4255 4.2074 16.5544 4.2074 17.6 4.2074C17.6 3.65727 17.6 1.75647 17.6 0.000976577C16.2042 0.000976577 14.6161 0.000976577 13.9161 0.000976577C8.69782 0.000697581 8.82075 4.04524 8.82075 4.64899Z"
+                        fill="black"
+                      >
+                    </g>
+                    <defs>
+                      <clippath id="clip0_320_149">
+                        <rect
+                          width="24"
+                          height="24"
+                          fill="white"
+                        >
+                      </clippath>
+                    </defs>
+                  </svg>
+                </a>
+              </div>
+              <div class="contacts__socials--instagram">
+                <a href="https://www.instagram.com/namu.museum/" target="_blank">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                  >
+                    <g clip-path="url(#clip0_320_152)">
+                      <path d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z" fill="black"></path>
+                      <path d="M12.0001 6.84473C9.15753 6.84473 6.84473 9.15734 6.84473 12.0001C6.84473 14.8426 9.15753 17.1554 12.0001 17.1554C14.8428 17.1554 17.1554 14.8426 17.1554 12.0001C17.1554 9.15734 14.8428 6.84473 12.0001 6.84473Z" fill="black"></path>
+                      <path d="M18.7191 4.51416C18.4258 4.51416 18.187 4.75293 18.187 5.04626C18.187 5.3396 18.4258 5.57837 18.7191 5.57837C19.0126 5.57837 19.2514 5.33978 19.2514 5.04626C19.2514 4.75275 19.0126 4.51416 18.7191 4.51416Z" fill="black"></path>
+                    </g>
+                    <defs>
+                      <clippath id="clip0_320_152">
+                        <rect
+                          width="24"
+                          height="24"
+                          fill="white"
+                        >
+                      </clippath>
+                    </defs>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="contacts__wrap--bottom">
+            <div class="contacts__wrap--middle">
+              <div class="contacts__schedule">
+                <p class="contacts__schedule--title">Графік роботи</p>
+                <p class="contacts__schedule--content">
+                  <strong>12:00 — 20:00</strong> середа<br>
+                  <strong>12:00 — 20:00</strong> четвер<br>
+                  <strong>12:00 — 20:00</strong> п’ятниця<br>
+                  <strong>11:00 — 19:00</strong> субота<br>
+                  <strong>11:00 — 19:00</strong> неділя<br><br>
+                  <strong>Вихідні:</strong> понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+              <div class="contacts__group">
+                <p class="contacts__group--title">Контакти:</p>
+                <p class="contacts__group--content">вул. М. Грушевського, 6; Київ, 01001<br>
+                  тел. +38 (044) 278-13-57<br>
+                  факс +38 (044) 278-74-54<br>
+                  e-mail: info@namu.kiev.ua
+                </p>
+              </div>
+            </div>
+            <nav class="contacts__nav">
+              <ul class="contacts__list">
+                <li class="contacts__link">
+                  <a href="#gallery" class="contacts__item">Галерея</a>
+                </li>
+                <li class="contacts__link">
+                  <a href="#subscribe" class="contacts__item">Про Нас</a>
+                </li>
+                <li class="contacts__link">
+                  <a href="#events" class="contacts__item">Виставки та події</a>
+                </li>
+                <li class="contacts__link">
+                  <a href="#contacts" class="contacts__item">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </section>
+        <section class="info">
+          <div class="info__wrap">
+            <p class="info__copyrights">Copyright © 2019. All Rights Reserved.</p>
+            <p class="info__author">Designed by Zhyriada Marina</p>
+          </div>
+        </section>
+      </div>
+    </footer>
 
     <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
   </body>
