add hover effect fix bg header

--- a/src/index.html
+++ b/src/index.html
@@ -17,41 +17,42 @@
 
   <body class="page__body" id="top">
     <header class="header">
-      <a href="#menu" class="icon-block">
-        <img
-          class="icon icon__header--menu"
-          src="./images/icons/burger-menu.png"
-          alt="menu"
-        >
-      </a>
-
-      <div class="header-block">
-        <a class="header__logo" href="#">
+      <div class="header__bg"></div>
+      <div class="header__content">
+        <a href="#menu" class="icon-block hover">
           <img
-            class="header__logo--img"
-            src="./images/icons/NA-MU-logo.png"
-            alt="art museum logo"
+            class="icon icon__header--menu"
+            src="./images/icons/burger-menu.png"
+            alt="menu"
           >
         </a>
-      </div>
 
-      <div class="art-museum">
-        <h1 class="art-museum__title ">ХУДОЖНІЙ МУЗЕЙ</h1>
-
-        <div class="art-museum__button-box">
-          <div class="art-museum__button-ticket">
-            <a href="#events" class="art-museum__button--text">КВИТКИ</a>
-          </div>
-          <a href="#events" class="art-museum__button-arrow"></a>
+        <div class="header-block">
+          <a class="header__logo hover" href="#">
+            <img
+              class="header__logo--img"
+              src="./images/icons/NA-MU-logo.png"
+              alt="art museum logo"
+            >
+          </a>
         </div>
 
-        <a href="#events" class="art-museum__rotate">ПОДІЇ</a>
+        <div class="art-museum">
+          <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <a class="button__ticket hover__small-effect" href="#events">
+            <div class="button__ticket-text">КВИТКИ</div>
+            <div class="button__arrow"></div>
+          </a>
+          <a href="#events" class="art-museum__rotate">ПОДІЇ</a>
+        </div>
       </div>
+
     </header>
 
     <aside class="menu page__menu" id="menu">
       <div class="menu-block">
-        <a href="#" class="icon-block">
+        <a href="#" class="icon-block hover">
           <img
             class="icon icon--close"
             src="./images/icons/burger-menu-close.png"
@@ -63,19 +64,19 @@
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__items">
-                <a class="nav__link" href="#gallery">Галерея</a>
+                <a class="nav__link hover" href="#gallery">Галерея</a>
               </li>
 
               <li class="nav__items">
-                <a class="nav__link" href="#about-us">Про Нас</a>
+                <a class="nav__link hover" href="#about-us">Про Нас</a>
               </li>
 
               <li class="nav__items">
-                <a class="nav__link" href="#events">Виставки та події</a>
+                <a class="nav__link hover" href="#events">Виставки та події</a>
               </li>
 
               <li class="nav__items">
-                <a class="nav__link" href="#contacts">Контакти</a>
+                <a class="nav__link hover" href="#contacts">Контакти</a>
               </li>
             </ul>
           </nav>
@@ -175,25 +176,25 @@
         <img
           src="./images/gallery-woman-in-national-clothes.png"
           alt="Фото"
-          class="gallery__photo--1-1 photo hover"
+          class="gallery__photo--1-1 photo hover__small-effect"
         >
 
         <img
           src="./images/gallery-winter.png"
           alt="Фото"
-          class="gallery__photo--1-2 photo hover"
+          class="gallery__photo--1-2 photo hover__small-effect"
         >
 
         <img
           src="./images/gallery-street.png"
           alt="Фото"
-          class="gallery__photo--2-1 photo hover"
+          class="gallery__photo--2-1 photo hover__small-effect"
         >
 
         <img
           src="./images/gallery-sea.png"
           alt="Фото"
-          class="gallery__photo--2-2 photo hover"
+          class="gallery__photo--2-2 photo hover__small-effect"
         >
       </div>
 
@@ -275,7 +276,7 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </div>
 
-        <form class="subscription__form" onsubmit="this.reset(); return false">
+        <form class="subscription__form hover__small-effect" onsubmit="this.reset(); return false">
           <input
             class="subscription__form-input"
             placeholder="E-mail"
@@ -297,7 +298,7 @@
       <div class="contacts__icon-block">
         <a class="contacts__logo" href="#">
           <img
-            class="contacts__logo--img"
+            class="contacts__logo--img hover"
             src="./images/icons/NA-MU-logo.png"
             alt="art museum logo"
           >
@@ -306,14 +307,14 @@
         <div class="contacts__icon-social-media">
           <a
             href="https://www.facebook.com/namu.museum/"
-            class="icon contacts__icon--facebook"
+            class="icon contacts__icon--facebook hover"
             target="_blank"
           >
           </a>
 
           <a
             href="https://www.instagram.com/namu.museum/"
-            class="icon contacts__icon--instagram"
+            class="icon contacts__icon--instagram hover"
             target="_blank"
           >
           </a>
@@ -344,38 +345,50 @@
 
       <div class="contacts__address block-text-about">
         <div class="contacts__address-title block-text-about__title">Графік роботи</div>
-        
+
         <div class="contacts__address-open block-text-about__description">
+          <a
+            class="contacts__link hover"
+            href="https://www.google.com/maps/place/вулиця Михайла Грушевського, 6, Київ, 01001"
+            target="_blank"
+          >
           вул. М. Грушевського, 6; Київ, 01001
-          <br>
-          тел. +38 (044) 278-13-57
-          <br>
-          факс +38 (044) 278-74-54
-          <br>
+          </a>
+
+          <a class="contacts__link hover" href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+
+          <a class="contacts__link hover" href="fax:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
+
+          <a
+            class="contacts__link hover"
+            href="mailto:info@namu.kiev.ua"
+            target="_blank"
+          >
           e-mail: info@namu.kiev.ua
+          </a>
         </div>
       </div>
 
       <div class="contacts__line">
-        <a href="#top" class="button-top__link"></a>
+        <a href="#top" class="button-top__link hover"></a>
       </div>
 
       <nav class="contacts-nav nav">
         <ul class="nav__list">
           <li class="nav__items">
-            <a class="nav__link contacts-nav__link" href="#gallery">Галерея</a>
+            <a class="nav__link contacts-nav__link hover" href="#gallery">Галерея</a>
           </li>
 
           <li class="nav__items">
-            <a class="nav__link contacts-nav__link" href="#about-us">Про Нас</a>
+            <a class="nav__link contacts-nav__link hover" href="#about-us">Про Нас</a>
           </li>
 
           <li class="nav__items">
-            <a class="nav__link contacts-nav__link" href="#events">Виставки та події</a>
+            <a class="nav__link contacts-nav__link hover" href="#events">Виставки та події</a>
           </li>
 
           <li class="nav__items">
-            <a class="nav__link contacts-nav__link" href="#contacts">Контакти</a>
+            <a class="nav__link contacts-nav__link hover" href="#contacts">Контакти</a>
           </li>
         </ul>
       </nav>
