project is done for all devices

--- a/src/index.html
+++ b/src/index.html
@@ -424,6 +424,25 @@
               </ul>
             </nav>
           </div>
+
+
+          <a href="#home">
+            <button class="contacts__arrow">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                viewBox="0 0 16 16"
+                fill="none"
+              >
+                <path
+                  d="M8 2L3 7L3.705 7.705L7.5 3.915V14H8.5V3.915L12.295 7.705L13 7L8 2Z"
+                  fill="#1A5A4C"
+                  class="contacts__arrow--arrow"
+                >
+              </svg>
+            </button>
+          </a>
         </section>
         <section class="info">
           <div class="info__wrap">
