add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -191,41 +191,49 @@
 
       <section class="galery" id="galery">
         <div class="container">
-          <h2 class="galery__title subtitle">Галерея</h2>
+
 
           <div class="galery__slaider slaider">
-            <div class="slaider__item">
-              <picture class="slaider__images-1">
-                <source
-                  media="(min-width: 1280px)"
-                  srcset="images/galery/1-desctop.jpg"
-                >
+            <div class="slaider__container">
+              <h2 class="galery__title subtitle">Галерея</h2>
 
-                <source
-                  media="(min-width: 640px)"
-                  srcset="images/galery/1-tablet.jpg"
-                >
+              <div class="slaider__item">
+                <picture class="slaider__images-1">
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="images/galery/1-desctop.jpg"
+                  >
 
-                <img
-                  src="images/galery/1-mobile.jpg"
-                  alt="girl"
-                >
-              </picture>
+                  <source
+                    media="(min-width: 640px)"
+                    srcset="images/galery/1-tablet.jpg"
+                  >
 
-              <picture class="slaider__images-2">
-                <img
-                  src="images/galery/2-desctop.jpg"
-                  alt="house"
-                >
-              </picture>
+                  <img
+                    src="images/galery/1-mobile.jpg"
+                    alt="girl"
+                  >
+                </picture>
 
-              <picture class="slaider__images-3">
-                <img
-                  src="images/galery/2-tablet.jpg"
-                  alt="duck"
-                >
-              </picture>
+                <picture class="slaider__images-2">
+                  <img
+                    src="images/galery/2-desctop.jpg"
+                    alt="house"
+                  >
+                </picture>
+
+                <picture class="slaider__images-3">
+                  <img
+                    src="images/galery/2-tablet.jpg"
+                    alt="duck"
+                  >
+                </picture>
+
+              </div>
             </div>
+
+
+
             <div class="slaider__item">
               <picture class="slaider__images-4">
                 <img
@@ -334,7 +342,9 @@
 
                   <div class="footer__weekend">
                     <span class="footer__time">Вихідні:</span>
-                    понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею
+                    понеділок, вівторок <br>
+                    Каса припиняє роботу за 1 годину <br>
+                    до закриття музею
                   </div>
                 </div>
               </div>
@@ -357,7 +367,13 @@
                     class="footer__phone-link"
                     href="tel:+380442781357"
                   >
-                    тел. +38 (044) 278-13-57 <br>
+                    тел. +38 (044) 278-13-57
+                  </a>
+
+                  <a
+                    class="footer__phone-link footer__fax-link"
+                    href="tel:+380442787454"
+                  >
                     факс +38 (044) 278-74-54
                   </a>
                 </div>
