after fixed eslint problems

--- a/src/index.html
+++ b/src/index.html
@@ -453,6 +453,6 @@
       </div>
     </footer>
 
-    <!-- <script type="text/javascript" src="scripts/main.js"></script> -->
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
