--- a/src/index.html
+++ b/src/index.html
@@ -108,71 +108,75 @@
     <main class="page__main">
       <section class="events" id="events">
         <div class="container">
-          <h2 class="events__title subtitle">Актуальні події</h2>
 
-          <div class="events__card">
-            <picture>
-              <source
-                media="(min-width: 1280px)"
-                srcset="images/events/1-desctop.jpg"
-              >
+          <div class="events__container">
+            <h2 class="events__title subtitle">Актуальні події</h2>
 
-              <source
-                media="(min-width: 640px)"
-                srcset="images/events/1-tablet.jpg"
-              >
+            <div class="events__card">
+              <picture>
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="images/events/1-desctop.jpg"
+                >
 
-              <img
-                class="events__image"
-                src="images/events/1-mobile.jpg"
-                alt="field"
-              >
-            </picture>
+                <source
+                  media="(min-width: 768px)"
+                  srcset="images/events/1-tablet.jpg"
+                >
 
-            <div class="events__body">
-              <div class="events__inf">
-                <div class="events__type">ВИСТАВКА</div>
-                <div class="events__date">26.08-29.11.2019</div>
+                <img
+                  class="events__image"
+                  src="images/events/1-mobile.jpg"
+                  alt="field"
+                >
+              </picture>
+
+              <div class="events__body">
+                <div class="events__inf">
+                  <div class="events__type">ВИСТАВКА</div>
+                  <div class="events__date">26.08-29.11.2019</div>
+                </div>
+
+                <h3 class="events__subtitle">Йду і повертаюсь</h3>
+                <div class="events__text">Національний Художній Музей України презентує унікальну частину колекції
+                  Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </div>
               </div>
+            </div>
 
-              <h3 class="events__subtitle">Йду і повертаюсь</h3>
-              <div class="events__text">Національний Художній Музей України презентує унікальну частину колекції
-                Градобанку - українське мистецтво другої половини 1980-1995 років.
+            <div class="events__card">
+              <picture>
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="images/events/2-desctop.jpg"
+                >
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="images/events/2-tablet.jpg"
+                >
+
+                <img
+                  class="events__image"
+                  src="images/events/2-mobile.jpg"
+                  alt="girl"
+                >
+              </picture>
+
+              <div class="events__body">
+                <div class="events__inf">
+                  <div class="events__type">ВИСТАВКА</div>
+                  <div class="events__date">26.08-29.11.2019</div>
+                </div>
+
+                <h3 class="events__subtitle">І спогади і мрії</h3>
+                <div class="events__text">Національний художній музей України до 100 річчя від дня народження видатної
+                  української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
               </div>
             </div>
           </div>
 
-          <div class="events__card">
-            <picture>
-              <source
-                media="(min-width: 1280px)"
-                srcset="images/events/2-desctop.jpg"
-              >
-
-              <source
-                media="(min-width: 640px)"
-                srcset="images/events/2-tablet.jpg"
-              >
-
-              <img
-                class="events__image"
-                src="images/events/2-mobile.jpg"
-                alt="girl"
-              >
-            </picture>
-
-            <div class="events__body">
-              <div class="events__inf">
-                <div class="events__type">ВИСТАВКА</div>
-                <div class="events__date">26.08-29.11.2019</div>
-              </div>
-
-              <h3 class="events__subtitle">І спогади і мрії</h3>
-              <div class="events__text">Національний художній музей України до 100 річчя від дня народження видатної
-                української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-              </div>
-            </div>
-          </div>
         </div>
 
         <div class="events__card-last">
@@ -287,7 +291,10 @@
                   required
               ></input>
 
-                <button class="subscription__arrow-button" type="submit"></button>
+                <button
+                  class="subscription__arrow-button"
+                  type="reset"
+                ></button>
               </form>
             </div>
           </div>
