--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
-     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,regular,500,600,700&display=swap" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,700display=swap" rel="stylesheet">
-     <link rel="icon" href="./images/icons/favicon.png">
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
-     <link rel="stylesheet" href="./styles/main.scss">
-     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
-     <script type="text/javascript" src="scripts/main.js" defer></script>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,regular,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,700display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/icons/favicon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./styles/main.scss">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer>
+    </script>
   </head>
 
   <body class="page__body">
