--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAMU</title>
+    <link
+      rel="shortcut icon"
+      href="images/icons/favicon.svg"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     >
   </head>
-  <body class="page__body">    
+  <body class="page__body">
     <header class="header">
       <div class="header__image">
         <div class="header__image--background"></div>
@@ -46,7 +50,7 @@
               </li>
 
               <li class="nav__item">
-                <a class="nav__link" href="#events">Про Нас</a>
+                <a class="nav__link" href="#about-us">Про Нас</a>
               </li>
 
               <li class="nav__item">
@@ -160,12 +164,12 @@
                 <img
                   src="images/gallery/bride1.png"
                   alt="brige"
-                  class="galery__slide--image"
+                  class="galery__slide galery__slide--image"
                 >
                 <img
                   src="images/gallery/gusy.png"
                   alt="gusy"
-                  class="galery__slide--image"
+                  class="galery__slide galery__slide--image"
                 >
 
                 <div class="galery-slider-control">
@@ -180,35 +184,36 @@
                 <img
                   src="images/gallery/bride.png"
                   alt="bride"
-                  class="galery__blocks--image-span4"
+                  class="galery__blocks galery__blocks--image-span4"
                 >
                 <img
                   src="images/gallery/glukhoman.png"
                   alt="glukhoman"
-                  class="galery__blocks--image-span8"
+                  class="galery__blocks galery__blocks--image-span8"
                 >
                 <img
                   src="images/gallery/sunny_day.png"
                   alt="sunny day"
-                  class="galery__blocks--image-span8"
+                  class="galery__blocks galery__blocks--image-span8"
                 >
                 <img
                   src="images/gallery/At_sea.png"
                   alt="At sea"
-                  class="galery__blocks--image-span4"
+                  class="galery__blocks galery__blocks--image-span4"
                 >
               </div>
             </div>
           </div>
         </div>
 
-        <div class="subscript">
+        <div id="about-us" class="subscript">
           <div class="subscript__content">
             <h2 class="subscript__content--title">Підписка</h2>
             <p class="subscript__content--description">Бути в курсі всіх актуальних подій та останніх новин.</p>
           </div>
 
           <form
+            onsubmit="this.reset(); return false;"
             action="#"
             class="subscript__form"
             method="post"
@@ -289,7 +294,7 @@
               </li>
 
               <li class="ooter-nav__item">
-                <a class="footer-nav__link" href="#events">Про Нас</a>
+                <a class="footer-nav__link" href="#about-us">Про Нас</a>
               </li>
 
               <li class="ooter-nav__item">
@@ -310,7 +315,7 @@
       </div>
     </footer>
     <a href="#" id="backtotop"></a>
-    
+
     <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/button.js"></script>
