--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,7 @@
                   class="subscription__form-email"
                   required
                 >
-                <button class="subscription__form-button"></button>
+                <button type="button" class="subscription__form-button"></button>
               </label>
             </form>
           </div>
