fix connect jquery

--- a/src/index.html
+++ b/src/index.html
@@ -316,7 +316,7 @@
     </footer>
     <a href="#" id="backtotop"></a>
 
-    <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/button.js"></script>
   </body>
