--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
-    <link rel="icon" href="./images/logo.png">
+    <link rel="icon" href="./images/logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
             <a href="#" class="top-bar__menu"></a>
             <a href="#" class="top-bar__logo-link">
               <img
-                src="./images/logo.png"
+                src="./images/logo.svg"
                 alt="museum foto"
                 class="top-bar__logo"
               >
@@ -233,16 +233,18 @@
           <div class="subscription__wrapper">
             <h2 class="subscription__title">Підписка</h2>
             <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
-            <form class="subscription__form">
+            <form
+              class="subscription__form"
+            >
               <label>
                 <input
                   type="email"
-                  name="Email"
+                  name="email"
                   placeholder="E-mail"
                   class="subscription__form-email"
                   required
                 >
-                <button type="button" class="subscription__form-button"></button>
+                <button type="submit" class="subscription__form-button"></button>
               </label>
             </form>
           </div>
