fix menu-shadow, logo it`s link, change positin logo and image in header for full hd

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
       <div class="container">
         <div class="top-bar top-bar--header">
           <a href="#menu" class="icon icon--menu"></a>
-          <!-- <a href="#" class="top-bar__logo">na<br>mu</a> -->
-          <div class="top-bar__logo">na<br>mu</div>
+          <a href="#" class="top-bar__logo">na<br>mu</a>
+          <!-- <div class="top-bar__logo">na<br>mu</div> -->
         </div>
 
 
@@ -235,7 +235,8 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__top">
-            <div class="footer__top-logo top-bar__logo">na<br>mu</div>
+            <!-- <div class="footer__top-logo top-bar__logo">na<br>mu</div> -->
+            <a href="#" class="footer__top-logo top-bar__logo">na<br>mu</a>
             <div class="icon-wrapper">
               <a
                 href="https://www.facebook.com/namu.museum/?locale=uk_UA"
