fix the menu on a mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAMU</title>
+    <title>NAMU</title>
     <link
       rel="shortcut icon"
       href="images/icons/favicon.svg"
@@ -235,7 +235,6 @@
       <div class="container">
         <div class="footer__wrapper">
           <div class="footer__top">
-            <!-- <div class="footer__top-logo top-bar__logo">na<br>mu</div> -->
             <a href="#" class="footer__top-logo top-bar__logo">na<br>mu</a>
             <div class="icon-wrapper">
               <a
@@ -280,8 +279,8 @@
                 class="footer-contact__content footer-contact__content--value"
                 target="_blank"
               >вул. М. Грушевського, 6; Київ, 01001</a>
-              <a href="tel:+38(044)2781357" class="footer-contact__content footer-contact__content--value">тел. +38 (044) 278-13-57</a>
-              <a href="tel:+38(044)2787454" class="footer-contact__content footer-contact__content--value"> факс +38 (044) 278-74-54</a>
+              <a href="tel:+380442781357" class="footer-contact__content footer-contact__content--value">тел. +38 (044) 278-13-57</a>
+              <a href="tel:+380442787454" class="footer-contact__content footer-contact__content--value"> факс +38 (044) 278-74-54</a>
               <a href="mailto:info@namu.kiev.ua" class="footer-contact__content footer-contact__content--value">e-mail: info@namu.kiev.ua</a>
             </div>
           </div>
